--- a/index.html
+++ b/index.html
@@ -1309,15 +1309,11 @@
             <div class="featured-projects">
                 <div class="featured-card scroll-fade">
                     <div class="featured-video">
-                        <!-- Replace with: <video src="videos/dress-a-brainrot.mp4" muted loop playsinline></video> -->
-                        <div class="placeholder">
-                            <i data-lucide="video" class="placeholder-icon"></i>
-                            <span>Video Coming Soon</span>
-                        </div>
+                        <video src="DressBrainrotVid.mp4" muted loop playsinline></video>
                     </div>
                     <div class="featured-content">
                         <div class="featured-header">
-                            <img src="images/dress-a-brainrot-icon.png" alt="Dress A Brainrot" class="game-icon">
+                            <img src="dress-a-brainrot-icon.png" alt="Dress A Brainrot" class="game-icon">
                             <h3 class="featured-title">Dress A Brainrot</h3>
                         </div>
                         <p class="featured-description">Purchase lucky blocks to unlock rare items and customize your brainrot. Features rebirth system, progression mechanics, stealing, fighting, and much more.</p>
